--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@vue/compiler-sfc": "^3.3.0",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "5.0.0",
+        "sass": "^1.69.5",
+        "sass-loader": "12.1.0",
+        "vue": "^3.2.36",
+        "vue-loader": "17.3.1"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.2",
+        "jquery": "^3.7.1",
+        "webpack-cli": "^5.1.4",
+        "yarn": "^1.22.19"
     }
 }
