--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@vue/compiler-sfc": "^3.3.0",
-        "axios": "^0.25",
+        "axios": "^1.6.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -25,6 +25,7 @@
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.2",
         "jquery": "^3.7.1",
+        "vform": "^2.1.2",
         "webpack-cli": "^5.1.4",
         "yarn": "^1.22.19"
     }
