--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/fortify": "^1.18",
         "laravel/framework": "^9.0",
+        "laravel/passport": "^11.8",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7"
     },
