--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "bootstrap": "^5.3.2",
         "jquery": "^3.7.1",
         "vform": "^2.1.2",
+        "vuex": "^4.0.2",
         "webpack-cli": "^5.1.4",
         "yarn": "^1.22.19"
     }
