--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "@vueform/multiselect": "^2.6.6",
         "bootstrap": "^5.3.2",
         "jquery": "^3.7.1",
         "vform": "^2.1.2",
