--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "bootstrap": "^5.3.2",
         "jquery": "^3.7.1",
         "sweetalert2": "^11.10.1",
+        "tiny-emitter": "^2.1.0",
         "vform": "^2.1.2",
         "vuex": "^4.0.2",
         "webpack-cli": "^5.1.4",
