--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
+        "pusher/pusher-php-server": "^7.2",
         "santigarcor/laratrust": "^7.2"
     },
     "require-dev": {
