--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "@vueform/multiselect": "^2.6.6",
         "bootstrap": "^5.3.2",
         "jquery": "^3.7.1",
+        "laravel-echo": "^1.16.0",
         "moment": "^2.30.1",
+        "pusher-js": "^8.4.0-rc2",
         "sweetalert2": "^11.10.1",
         "tiny-emitter": "^2.1.0",
         "vform": "^2.1.2",
