--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "bootstrap": "^5.3.2",
         "chart.js": "^4.4.2",
         "jquery": "^3.7.1",
+        "jspdf": "^2.5.1",
+        "jspdf-autotable": "^3.8.2",
         "laravel-echo": "^1.16.0",
         "moment": "^2.30.1",
         "pusher-js": "^8.4.0-rc2",
@@ -35,6 +37,7 @@
         "vform": "^2.1.2",
         "vuex": "^4.0.2",
         "webpack-cli": "^5.1.4",
+        "xlsx": "^0.18.5",
         "yarn": "^1.22.19"
     }
 }
