--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "sweetalert2": "^11.10.1",
         "tiny-emitter": "^2.1.0",
         "vform": "^2.1.2",
+        "vue-i18n": "9",
         "vuex": "^4.0.2",
         "webpack-cli": "^5.1.4",
         "xlsx": "^0.18.5",
